Add Search and Save Event
Add SearchView, add DatePickerFragment, add Mappers, add Database, save Events

--- a/app/src/main/res/layout/fragment_event_list.xml
+++ b/app/src/main/res/layout/fragment_event_list.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
-            tools:listitem="@layout/item_layout_user" />
+            tools:listitem="@layout/item_layout_event" />
 
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
@@ -36,7 +36,6 @@
         android:contentDescription="@string/event_adder_str"
         android:text="@string/event_adder_str"
         app:icon="@android:drawable/ic_input_add"
-        app:showMotionSpec="@anim/nav_default_pop_enter_anim"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
