--- a/app/src/main/res/layout/fragment_event_viewing.xml
+++ b/app/src/main/res/layout/fragment_event_viewing.xml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card_event"
-    style="@style/Widget.Material3.CardView.Filled"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="20dp"
-    android:transitionName="@{string/card_event_transition_name(event.id)}"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="10dp">
+    android:layout_height="match_parent"
+    tools:context=".screens.eventViewing.EventViewingFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
 
         <TextView
-            android:id="@+id/event_name"
+            android:id="@+id/event_date"
             style="@style/Theme.EventPlanner.TextView.Header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -25,21 +21,7 @@
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="@string/event_name" />
-
-
-        <TextView
-            android:id="@+id/event_place"
-            style="@style/Theme.EventPlanner.TextView.Body"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/weather_icon"
-            tools:text="@tools:sample/cities" />
+            tools:text="@tools:sample/date/ddmmyy" />
 
         <ImageView
             android:id="@+id/weather_icon"
@@ -58,26 +40,45 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/weather_icon"
             tools:text="@string/weather_temp" />
 
-
         <TextView
-            android:id="@+id/event_date"
+            android:id="@+id/event_place"
             style="@style/Theme.EventPlanner.TextView.Body"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/weather_icon"
-            app:layout_constraintEnd_toStartOf="@+id/weather_temp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            tools:text="@tools:sample/date/ddmmyy" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/weather_temp"
+            tools:text="@tools:sample/cities" />
 
+        <TextView
+            android:id="@+id/event_description_header"
+            style="@style/Theme.EventPlanner.TextView.Header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="@string/event_description_header"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/event_place"/>
+
+        <TextView
+            android:id="@+id/event_description"
+            style="@style/Theme.EventPlanner.TextView.Extra"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/event_description_header"
+            tools:text="@string/event_description_header"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-</com.google.android.material.card.MaterialCardView>
+</ScrollView>
