--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,6 +14,9 @@
         <action
             android:id="@+id/action_EventListFragment_to_EventAddAndEditFragment"
             app:destination="@id/EventAddAndEditFragment" />
+        <action
+            android:id="@+id/action_EventListFragment_to_EventViewingFragment"
+            app:destination="@id/EventViewingFragment" />
     </fragment>
     <fragment
         android:id="@+id/EventAddAndEditFragment"
@@ -24,6 +27,28 @@
         <action
             android:id="@+id/action_EventAddAndEditFragment_to_EventListFragment"
             app:destination="@id/EventListFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/EventViewingFragment"
+        android:name="com.eriksargsyan.eventplanner.screens.eventViewing.EventViewingFragment"
+        android:label="@string/app_name"
+        tools:layout="@layout/fragment_event_viewing">
+
+        <action
+            android:id="@+id/action_EventAddAndEditFragment_to_EventListFragment"
+            app:destination="@id/EventListFragment" />
+        <action
+            android:id="@+id/action_EventViewingFragment_to_EventAddAndEditFragment"
+            app:destination="@id/EventAddAndEditFragment" />
+
+        <argument
+            android:name="eventId"
+            android:defaultValue="0"
+            app:argType="integer" />
+        <argument
+            android:name="eventName"
+            android:defaultValue=""
+            app:argType="string" />
     </fragment>
 
 </navigation>
