--- a/app/src/main/res/layout/fragment_event_viewing.xml
+++ b/app/src/main/res/layout/fragment_event_viewing.xml
@@ -47,25 +47,26 @@
         <TextView
             android:id="@+id/event_place"
             style="@style/Theme.EventPlanner.TextView.Body"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/weather_temp"
             tools:text="@tools:sample/cities" />
 
-        <TextView
-            android:id="@+id/event_description_header"
-            style="@style/Theme.EventPlanner.TextView.Header"
-            android:layout_width="wrap_content"
+
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/description_divider"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:text="@string/event_description_header"
+            app:dividerInsetEnd="16dp"
+            app:dividerInsetStart="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/event_place"/>
+            app:layout_constraintTop_toBottomOf="@+id/event_place" />
+
 
         <TextView
             android:id="@+id/event_description"
@@ -74,11 +75,16 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/event_description_header"
-            tools:text="@string/event_description_header"/>
+            app:layout_constraintTop_toBottomOf="@+id/description_divider"
+            tools:text="@string/event_description_header" />
+
+        <include
+            android:id="@+id/loading_field"
+            layout="@layout/item_progress_bar" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
