--- a/app/src/main/res/layout/item_layout_event.xml
+++ b/app/src/main/res/layout/item_layout_event.xml
@@ -12,7 +12,8 @@
     app:strokeWidth="1dp"
     app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
     app:cardCornerRadius="12dp"
-    app:cardElevation="1dp">
+    app:cardElevation="1dp"
+    tools:context=".screens.eventList.EventListFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
