--- a/app/src/main/res/layout/fragment_event_viewing.xml
+++ b/app/src/main/res/layout/fragment_event_viewing.xml
@@ -29,8 +29,7 @@
             android:layout_height="70dp"
             android:contentDescription="@string/weather_icon"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/weather_icon" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/weather_temp"
@@ -51,7 +50,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/weather_temp"
             tools:text="@tools:sample/cities" />
@@ -60,6 +58,7 @@
             android:id="@+id/chipGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             app:checkedChip="@+id/coming_chip"
             app:selectionRequired="true"
             app:singleSelection="true"
