--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -29,6 +29,11 @@
         android:label="@string/app_name"
         tools:layout="@layout/fragment_event_list">
 
+        <action
+            android:id="@+id/action_EventListFragment_to_EventListTabFragment"
+            app:destination="@id/EventListTabFragment"
+            app:popUpTo="@+id/EventListTabFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/EventAddAndEditFragment"
@@ -38,7 +43,9 @@
 
         <action
             android:id="@+id/action_EventAddAndEditFragment_to_EventListTabFragment"
-            app:destination="@id/EventListTabFragment" />
+            app:destination="@id/EventListTabFragment"
+            app:popUpTo="@+id/EventListTabFragment"
+            app:popUpToInclusive="true" />
         <argument
             android:name="eventId"
             android:defaultValue="0"
@@ -56,7 +63,9 @@
 
         <action
             android:id="@+id/action_EventViewingFragment_to_EventListTabFragment"
-            app:destination="@id/EventListTabFragment" />
+            app:destination="@id/EventListTabFragment"
+            app:popUpTo="@+id/EventListTabFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_EventViewingFragment_to_EventAddAndEditFragment"
             app:destination="@id/EventAddAndEditFragment" />
